# sample-apps-for-qualcomm-linux

GenAI-Solutions/GenAI-Studio/: Dockerfile.base  Dockerfile.build-base  Dockerfile.runtime  README.md  docker-bake.hcl  docker-compose.yml  docker-run-cdi-hw-acc.json  versions.env
GenAI-Solutions/GenAI-Studio/ci/: build_and_test.sh
GenAI-Solutions/GenAI-Studio/core-services/: README.md
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/: .dockerignore  CODE_FLOW.md  Dockerfile  MODEL_SETUP.md  README.md  build.sh  run.sh
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/: CMakeLists.txt  StreamChannel.h  preprocess.py  server_sse.cpp
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/GeniePipelineRunner/: GeniePipelineRunner.cpp  GeniePipelineRunner.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/ImageEncoder/: ImageEncoderNode.cpp  ImageEncoderNode.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/ImagePreprocessor/: ImagePreprocessor.cpp  ImagePreprocessor.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/LutEncoder/: LutEncoderNode.cpp  LutEncoderNode.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/TextGenerator/: TextGeneratorNode.cpp  TextGeneratorNode.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/Utils/: GenieCheck.h  GenieUtils.h
GenAI-Solutions/GenAI-Studio/core-services/image-to-text/src/VlmService/: GenieWorker.cpp  GenieWorker.h  VlmService.cpp  VlmService.h
GenAI-Solutions/GenAI-Studio/core-services/orchestrator/: .dockerignore  CODE_FLOW.md  Dockerfile  README.md  SETUP.md  device_app.py
GenAI-Solutions/GenAI-Studio/core-services/orchestrator/app/: common.py  context.py  i2t.py  imagegen.py  npu_arbiter.py  openai.py  stt.py  system.py  tg.py
GenAI-Solutions/GenAI-Studio/core-services/orchestrator/static/: index.html
GenAI-Solutions/GenAI-Studio/core-services/orchestrator/tools/: i2t_orchestrator_additional_68_suite.py  i2t_orchestrator_extensive_suite.py
GenAI-Solutions/GenAI-Studio/core-services/speech-to-text/: .dockerignore  CODE_FLOW.md  Dockerfile  MODEL_SETUP.md  README.md  build.sh  run.sh
GenAI-Solutions/GenAI-Studio/core-services/speech-to-text/src/: AsrConfig.cpp  AsrConfig.hpp  AsrService.cpp  AsrService.hpp  CMakeLists.txt  ErrorResponder.cpp  ErrorResponder.hpp  HttpPolicies.cpp  LegacyRoutes.cpp  ModelCatalog.cpp  ModelCatalog.hpp  OpenAiAudioContract.hpp  OpenAiRoutes.cpp  RealtimeRoutes.cpp  RealtimeSessionHandlers.cpp  RealtimeSessionStore.cpp  RealtimeSessionStore.hpp  TranscriptionExecutor.cpp  TranscriptionExecutor.hpp  WhisperEngine.cpp  WhisperEngine.hpp  main.cpp
GenAI-Solutions/GenAI-Studio/core-services/text-to-image/: CODE_FLOW.md  Dockerfile  MODEL_SETUP.md  README.md  build.sh  run.sh
GenAI-Solutions/GenAI-Studio/core-services/text-to-image/src/: CMakeLists.txt  ClipTokenizer.cpp  ClipTokenizer.hpp  DpmScheduler.cpp  DpmScheduler.hpp  ImageGenService.cpp  ImageGenService.hpp  StableDiffusionEngine.cpp  StableDiffusionEngine.hpp  main.cpp
GenAI-Solutions/GenAI-Studio/core-services/text-to-speech/meloTTS/: .dockerignore  Dockerfile  Model-Generation.md  README.md  build.sh  run.sh  target_service_smoke.sh
GenAI-Solutions/GenAI-Studio/core-services/text-to-speech/meloTTS/src/: CMakeLists.txt  TtsApp.cpp  TtsApp.hpp  TtsEngine.cpp  TtsEngine.hpp  TtsService.cpp  TtsService.hpp  main.cpp
GenAI-Solutions/GenAI-Studio/core-services/text-to-text/: .dockerignore  CODE_FLOW.md  Dockerfile  MODEL_SETUP.md  README.md  build.sh  run.sh
GenAI-Solutions/GenAI-Studio/core-services/text-to-text/src/: CMakeLists.txt  ChatApp.cpp  ChatApp.hpp  Genie.cpp  Genie.hpp  Main.cpp  PromptHandler.cpp  PromptHandler.hpp
GenAI-Solutions/GenAI-Studio/core-services/text-to-text/src/server/: CompletionRoutes.cpp  CompletionRuntime.cpp  CompletionRuntime.hpp  CompletionService.cpp  CompletionService.hpp  HttpServer.hpp  LegacyRoutes.cpp  ModelAccessPolicy.hpp  ModelCatalog.cpp  ModelCatalog.hpp  ModelRoutes.cpp  ServerUtils.cpp  ServerUtils.hpp
GenAI-Solutions/GenAI-Studio/docs/: API_CONTRACTS.md  DOCUMENTATION_INDEX.md  NPU_ARBITRATION_RUNBOOK.md  SIX_SERVICE_PAIN_POINTS.md  TROUBLESHOOTING_GUIDE.md
GenAI-Solutions/GenAI-Studio/docs/setup/: DEVICE_SETUP.md
GenAI-Solutions/GenAI-Studio/scripts/: README.md  bootstrap-base.sh  bootstrap-runtime.sh  build-all.sh  build_qcom_edge_strategy_deck.py  build_qcom_edge_strategy_deck_v2.py  capture-golden-fingerprint.sh  check-i2t-complexity.sh  compose-doctor.sh  create-runtime-base.sh  download-qairt-sdk.sh  pull-ubuntu-arm64.sh  validate-i2t-release-gate.sh  validate-stack.sh
GenAI-Solutions/GenAI-Studio/scripts/lib/: common.sh
GenAI-Solutions/GenAI-Studio/scripts/repro/: capture_golden_fingerprint.sh  compose_doctor.sh  run_full_stack_smoke.sh
GenAI-Solutions/GenAI-Studio/solutions/: README.md
GenAI-Solutions/GenAI-Studio/solutions/android-application/maid/: GENAI_STUDIO_INTEGRATION.md  README.md
GenAI-Solutions/GenAI-Studio/solutions/anything-llm/: README.md  genai-studio-integration.patch
GenAI-Solutions/GenAI-Studio/solutions/cpp-application/: GENAI_STUDIO_INTEGRATION.md
GenAI-Solutions/GenAI-Studio/solutions/web-application/image-generation/: GENAI_STUDIO_INTEGRATION.md  README.md  genai-studio-intergration.patch
GenAI-Solutions/GenAI-Studio/solutions/web-application/image-to-text/: GENAI_STUDIO_INTEGRATION.md  README.md  genai-studio-integration.patch
GenAI-Solutions/GenAI-Studio/solutions/web-application/text-to-speech/: GENAI_STUDIO_INTEGRATION.md  README.md  genai-studio-integration.patch
GenAI-Solutions/GenAI-Studio/tests/: README.md
GenAI-Solutions/GenAI-Studio/tests/unified/: CORE_SERVICE_CASE_AUDIT.md  README.md  check_case_counts.py  manifest.yaml  openai_i2t_responses_multiturn.py  requirements.txt  run_http_suite.py  run_manifest.py
GenAI-Solutions/GenAI-Studio/tests/unified/suites/: image-to-text.yaml  orchestrator.yaml  speech-to-text.yaml  text-to-image.yaml  (+2 more)
qualcomm-linux/scripts/: download_artifacts.sh
scripts/: build.sh
